# TerminalEmulator

Backend/: Cargo.toml
Backend/src/: main.rs
FrontEnd/TerminalEmulator/: ContentView.swift  TerminalEmulatorApp.swift
FrontEnd/TerminalEmulator.xcodeproj/: project.pbxproj
FrontEnd/TerminalEmulator.xcodeproj/project.xcworkspace/xcuserdata/rishabhvasudevan.xcuserdatad/: UserInterfaceState.xcuserstate
FrontEnd/TerminalEmulator.xcodeproj/xcuserdata/rishabhvasudevan.xcuserdatad/xcschemes/: xcschememanagement.plist
