[package]
name = "my_project"
version = "0.1.0"
edition = "2018"

[dependencies]
chatgpt_rs = "1.1.10"
dotenv = "0.15.0"
nix = "0.22.1"
regex = "1.8.4"
reqwest = "0.11.18"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.99"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
